Changed the packaging field in pom.xml(corrected last change)

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,5 @@
   <groupId>com.first.maven.proj</groupId>
   <artifactId>java-maven-first</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
 </project>
