--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,13 @@
   <artifactId>java-maven-first</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifacrId>
+			<version>2.16</version>
+		</plugin>
+	</plugins>
+  </build>
 </project>
