--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<plugins>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifacrId>
+			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.16</version>
 		</plugin>
 	</plugins>
