--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,50 @@
   <artifactId>java-maven-first</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+	
+  <dependencies>
+    <!-- Testing dependencies. -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>    
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.4.0</version>
+      <scope>test</scope>
+      <!-- junit:junit-dep is deprecated, and junit:junit replaces it. -->
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit-dep</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+  </dependencies>
+
   <build>
-	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.16</version>
-		</plugin>
-	</plugins>
+    <plugins>
+      <plugin>
+        <!-- Configures the compiler. -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <compilerArgs>
+            <arg>-Xlint</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<version>2.16</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
