--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>    
-    <dependency>
-      <groupId>com.github.stefanbirkner</groupId>
-      <artifactId>system-rules</artifactId>
-      <version>1.4.0</version>
-      <scope>test</scope>
-      <!-- junit:junit-dep is deprecated, and junit:junit replaces it. -->
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit-dep</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
   </dependencies>
 
   <build>
@@ -50,4 +37,14 @@
       </plugin>
     </plugins>
   </build>
+  <reporting>
+    <plugins>
+      <plugin>
+        <!-- JUnit code coverage. -->
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.6</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
