--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
         <groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
 	<version>2.16</version>
+	 <executions>
+          <execution>
+            <goals>
+              <goal>unit-test</goal>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
