--- a/pom.xml
+++ b/pom.xml
@@ -33,18 +33,24 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.16</version>
-	 <executions>
+	<version>2.16</version>	 
+      </plugin>
+      <plugin>        
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.16</version>
+        <executions>
           <execution>
             <goals>
-              <goal>unit-test</goal>
-              <goal>test</goal>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
+	
   <reporting>
     <plugins>
       <plugin>
